--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "react-text-mask": "^5.4.3",
     "react-tiny-virtual-list": "^2.2.0",
     "react-use": "17.4.0",
-    "styled-components": "5.2.3",
+    "styled-components": "5.3.6",
     "text-mask-addons": "^3.8.0",
     "validator": "^12.1.0"
   },
@@ -80,6 +80,7 @@
     "@babel/runtime": "^7.20.1",
     "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
+    "@testing-library/react": "^13.4.0",
     "@types/color": "^3.0.0",
     "@types/jest": "^29.2.1",
     "@types/jquery": "^3.3.31",
@@ -127,6 +128,8 @@
     "identity-obj-proxy": "3.0.0",
     "is-wsl": "^2.1.1",
     "jest": "29.2.2",
+    "jest-css-modules-transform": "^4.4.2",
+    "jest-environment-jsdom": "^29.3.1",
     "jest-environment-jsdom-fourteen": "1.0.1",
     "jest-watch-typeahead": "^2.2.0",
     "mini-css-extract-plugin": "0.9.0",
@@ -193,7 +196,7 @@
     "testEnvironment": "jest-environment-jsdom-fourteen",
     "transform": {
       "^.+\\.(js|jsx|ts|tsx)$": "<rootDir>/node_modules/babel-jest",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
+      ".+\\.(css|styl|less|sass|scss)$": "<rootDir>/node_modules/jest-css-modules-transform",
       "^(?!.*\\.(js|jsx|ts|tsx|css|json)$)": "<rootDir>/config/jest/fileTransform.js"
     },
     "transformIgnorePatterns": [
