--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@blueprintjs/core": "4.12.0",
     "@blueprintjs/datetime": "4.4.7",
+    "@blueprintjs/datetime2": "^0.9.5",
     "@blueprintjs/icons": "4.10.1",
     "@blueprintjs/popover2": "^1.8.1",
     "@blueprintjs/select": "4.8.8",
