--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,29 +8,25 @@ on:
   push:
     branches: [master, beta]
 
-env:
-  NODE_VERSION: '16.18.0'
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node_version: ['16']
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      - name: Use Node.js ${{ env.NODE_VERSION }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ env.NODE_VERSION }}
+      - uses: actions/checkout@v2
 
       - name: Install Dependencies
         run: yarn
 
-      - name: Build Project
+      - name: Install Dependencies
         run: yarn build
 
       - name: Semantic Release
