--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,7 +13,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         node_version: ['16']
@@ -26,7 +26,7 @@ jobs:
       - name: Install Dependencies
         run: yarn
 
-      - name: Install Dependencies
+      - name: Build Project
         run: yarn build
 
       - name: Semantic Release
